# passagemath-pkg-dependent_bterms

./: .gitignore  Dockerfile  README.md  pyproject.toml  toolbox_demo.ipynb  tox.ini
.github/workflows/: ci.yml  lint.yml  pypi-publish.yml
dependent_bterms/: __init__.py  dependent_variable_ring.py  structures.py  utils.py
