[tool.poetry]
name = "dependent-bterms"
version = "0.1.0"
description = ""
authors = ["Benjamin Hackl <devel@benjamin-hackl.at>"]
readme = "README.md"
packages = [{include = "dependent_bterms"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
