[tool.poetry]
name = "dependent-bterms"
version = "1.0.0"
description = "An extension to SageMath's module for computations with asymptotic expansions. Provides a special AsymptoticRing that allows to specify a secondary, dependent (monomially bounded) variable."
authors = ["Benjamin Hackl <devel@benjamin-hackl.at>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/behackl/dependent_bterms"
packages = [{include = "dependent_bterms"}]

[tool.poetry.dependencies]
python = "^3.9"

passagemath-graphs = { version = "^10.4", optional = true }
passagemath-repl = { version = "^10.4", optional = true }
passagemath-symbolics = { version = "^10.4", optional = true }

[tool.poetry.extras]
passagemath = [
    "passagemath-graphs",
    "passagemath-repl",
    "passagemath-symbolics",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
